Finalizei a Função Menu
Adicionei uma Variável "Permissão" Para quando o usuário sair do menu e queira manter a lista do menu aberta, a função de ocultar o menu não seja ativada

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <span class="material-symbols-outlined">menu</span>
         </div>
         <p>MentalClarity</p>
-        <div class="menu-close" id="menu">
+        <div onmouseover="ManterMenu()" onmouseout="SairMenu()" class="menu-close" id="menu">
             <p>Inglês</p>
             <p>Programação</p>
             <p>Livros</p>
@@ -29,10 +29,5 @@
             </span>
         </div>
     </header>
-    <!--#menu
-    #darkmode
-    #logar/#deslogar
-    #-->
-
 </body>
 </html>
