--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <div class="menu" onmouseover="AtivarMenu()" onmouseout="DesativarMenu()">
             <span class="material-symbols-outlined">menu</span>
         </div>
-        <p>MentalClarity</p>
+        <p id="logo">What's Up?</p>
         <div onmouseover="ManterMenu()" onmouseout="SairMenu()" class="menu-close" id="menu">
             <p>Inglês</p>
             <p>Programação</p>
@@ -29,5 +29,34 @@
             </span>
         </div>
     </header>
+    <section>
+        <div class="AddListAndTask">
+            <div id="AddList">
+                <p>Adicionar Lista</p>
+            </div>
+            <div id="AddTask">
+                <p>Adicionar Tarefa</p>
+            </div>
+        </div>
+        <div class="Tasks">
+            <div id="TaskTitle">
+                <p>Programar</p>
+            </div>
+            <div id="Resources">
+                <div id="Edit" title="Editar Tarefa">
+                    <span class="material-symbols-outlined">edit</span>
+                </div>
+                <div id="Info" title="Descrição e Data De Criação">
+                    <span class="material-symbols-outlined">info</span>
+                </div>
+                <div id="Delete" title="Deletar Tarefa">
+                    <span class="material-symbols-outlined">delete</span>
+                </div>
+                <div id="Check" title="Checkar Tarefa">
+                    <span class="material-symbols-outlined">check</span>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
