--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,7 @@ header p#logo {
 .menu-close {
     display: none;
     justify-content: center;
+    
     flex-direction: column;
     padding: 20px;
     gap: 20px;
@@ -53,7 +54,17 @@ header p#logo {
 }
 
 .menu-close p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: white;
+    cursor: pointer;
+    gap: 10px;
+    font-weight: 500;
+}
+
+.menu-close p span {
+    color: #991b1b;
 }
 
 .opcoes {
@@ -70,12 +81,14 @@ header p#logo {
 
 section {
     display: flex;
+    margin: auto;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 10px;
+    padding: 20px;
     gap: 10px;
-    border: 1px solid black;
+    width: 95%;
+    box-shadow: 0.5px 0.5px 4px rgba(0, 0, 0, 0.5);
 }
 
 .AddListAndTask {
@@ -103,6 +116,7 @@ section {
 }
 
 #AddList:hover {
+    background-color: #19C37D;
     animation: flutuar 1.5s infinite;
 }
 
@@ -123,25 +137,30 @@ section {
 
 
 #AddTask:hover {
+    background-color: #19C37D;
     animation: flutuar 1.5s infinite;
 }
 
 .Tasks {
     display: flex;
     justify-content: space-between;
+    
     padding: 10px;
     width: 100%;
-    border: 1px solid;
+    border-bottom: 1px solid;
     box-shadow: 0.5px 0.5px 4px rgba(0, 0, 0, 0.500);
+
 }
 
 #TaskTitle {
     display: flex;
-    justify-content: center;
     align-items: center;
-    border-bottom: 2px solid;
-
+    
     font-size: 1.1em;
+    width: 50%;
+    color: #33334F;
+    user-select: none;
+    font-weight: 500;
 }
 
 #Resources {
