--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/darkmode.css">
+    <link rel="stylesheet" href="../static/css/responsive.css">
     <script src="../static/js/script.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 </head>
@@ -16,9 +17,9 @@
         </div>
         <p id="logo">What's Up?</p>
         <div onmouseover="ManterMenu()" onmouseout="SairMenu()" class="menu-close" id="menu">
-            <p>Inglês</p>
-            <p>Programação</p>
-            <p>Livros</p>
+            <p>Trabalho <span class="material-symbols-outlined">delete</span></p>
+            <p>Urgentes <span class="material-symbols-outlined">delete</span></p>
+            <p>Interesses <span class="material-symbols-outlined">delete</span></p>
         </div>
         <div class="opcoes">
             <span class="material-symbols-outlined">
@@ -41,6 +42,82 @@
         <div class="Tasks">
             <div id="TaskTitle">
                 <p>Programar</p>
+            </div>
+            <div id="Resources">
+                <div id="Edit" title="Editar Tarefa">
+                    <span class="material-symbols-outlined">edit</span>
+                </div>
+                <div id="Info" title="Descrição e Data De Criação">
+                    <span class="material-symbols-outlined">info</span>
+                </div>
+                <div id="Delete" title="Deletar Tarefa">
+                    <span class="material-symbols-outlined">delete</span>
+                </div>
+                <div id="Check" title="Checkar Tarefa">
+                    <span class="material-symbols-outlined">check</span>
+                </div>
+            </div>
+        </div>
+        <div class="Tasks">
+            <div id="TaskTitle">
+                <p>Estudar Inglês</p>
+            </div>
+            <div id="Resources">
+                <div id="Edit" title="Editar Tarefa">
+                    <span class="material-symbols-outlined">edit</span>
+                </div>
+                <div id="Info" title="Descrição e Data De Criação">
+                    <span class="material-symbols-outlined">info</span>
+                </div>
+                <div id="Delete" title="Deletar Tarefa">
+                    <span class="material-symbols-outlined">delete</span>
+                </div>
+                <div id="Check" title="Checkar Tarefa">
+                    <span class="material-symbols-outlined">check</span>
+                </div>
+            </div>
+        </div>
+        <div class="Tasks">
+            <div id="TaskTitle">
+                <p>Ler Livros</p>
+            </div>
+            <div id="Resources">
+                <div id="Edit" title="Editar Tarefa">
+                    <span class="material-symbols-outlined">edit</span>
+                </div>
+                <div id="Info" title="Descrição e Data De Criação">
+                    <span class="material-symbols-outlined">info</span>
+                </div>
+                <div id="Delete" title="Deletar Tarefa">
+                    <span class="material-symbols-outlined">delete</span>
+                </div>
+                <div id="Check" title="Checkar Tarefa">
+                    <span class="material-symbols-outlined">check</span>
+                </div>
+            </div>
+        </div>
+        <div class="Tasks">
+            <div id="TaskTitle">
+                <p>Treinar Karatê</p>
+            </div>
+            <div id="Resources">
+                <div id="Edit" title="Editar Tarefa">
+                    <span class="material-symbols-outlined">edit</span>
+                </div>
+                <div id="Info" title="Descrição e Data De Criação">
+                    <span class="material-symbols-outlined">info</span>
+                </div>
+                <div id="Delete" title="Deletar Tarefa">
+                    <span class="material-symbols-outlined">delete</span>
+                </div>
+                <div id="Check" title="Checkar Tarefa">
+                    <span class="material-symbols-outlined">check</span>
+                </div>
+            </div>
+        </div>
+        <div class="Tasks">
+            <div id="TaskTitle">
+                <p>Meditar por 1 Hora</p>
             </div>
             <div id="Resources">
                 <div id="Edit" title="Editar Tarefa">
