--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../static/css/cadastro.css">
 </head>
 <body>
-    
+    <section>
+        <div class="form">
+            <h1>Login</h1>
+            <form action="">
+                <input type="text" placeholder="UserName" required>
+                <input type="password" name="" id="" placeholder="PassWord" required>
+                <a href="">Não possuo uma conta</a>
+                <input id="submit" type="submit" value="Login">
+            </form>
+        </div>
+        <div class="Saudação">
+            <h1>Bem Vindo ao ClearMind!</h1>
+            <p>A Organização Começa Dentro de Você</p>
+        </div>
+    </section>
 </body>
 </html>
