--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -1,5 +1,4 @@
 /*Aplicativo*/
-
 @media screen and (min-width: 720px) and (max-width: 1920px) {
     section {
         margin: auto;
@@ -13,3 +12,40 @@
 }
 
 /*Login e Cadastro*/
+
+@media screen and (min-width: 720px) and (max-width: 1920px) {
+    section#CandLogin {
+        box-shadow: none;
+}
+
+@media screen and (max-width: 800px) {
+    
+    section#CandLogin {
+        width: 70%;
+        height: 50%;
+    }
+
+    .Saudação {
+        display: none;
+    }
+
+    .form {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    
+    section#CandLogin {
+        width: 90%;
+        height: 60%;
+    }
+
+    .Saudação {
+        display: none;
+    }
+
+    .form {
+        width: 100%;
+    }
+}
