--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/darkmode.css">
     <link rel="stylesheet" href="../static/css/responsive.css">
+    <link rel="stylesheet" href="../static/css/animation.css">
     <script src="../static/js/script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.all.min.js"></script>
@@ -19,9 +20,9 @@
         </div>
         <p id="logo">What's Up?</p>
         <div onmouseover="ManterMenu()" onmouseout="SairMenu()" class="menu-close" id="menu">
-            <p>Trabalho <span class="material-symbols-outlined">delete</span></p>
-            <p>Urgentes <span class="material-symbols-outlined">delete</span></p>
-            <p>Interesses <span class="material-symbols-outlined">delete</span></p>
+            <p> <span class="material-symbols-outlined">delete</span></p>
+            <p><span class="material-symbols-outlined">delete</span></p>
+            <p><span class="material-symbols-outlined">delete</span></p>
         </div>
         <div class="opcoes">
             <span class="material-symbols-outlined">
