--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Sign In</title>
     <link rel="stylesheet" href="../static/css/account.css">
     <link rel="stylesheet" href="../static/css/responsive.css">
     <link rel="stylesheet" href="../static/css/animation.css">
@@ -11,18 +11,17 @@
 <body>
     <section id="CandLogin">
         <div class="form">
-            <h1>Sign Up</h1>
+            <h1>Sign In</h1>
             <form action="">
                 <input type="text" placeholder="UserName" required minlength="8">
                 <input type="password" name="" id="" placeholder="PassWord" required minlength="8">
-                <input type="password" name="" id="" placeholder="Repeat PassWord" required minlength="8">
-                <a href="../templates/login.html">I Have an Account</a>
-                <input id="submit" type="submit" value="Sign Up">
+                <a href="../templates/cadastro.html">I Don't Have an Account</a>
+                <input id="submit" type="submit" value="Sign in">
             </form>
         </div>
         <div class="Saudação">
             <h1>Welcome To ClearMind!</h1>
-            <p>Organization Starts WIthin You</p>
+            <p>Organization Starts Within You</p>
         </div>
     </section>
 </body>
