--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,7 @@ header p#logo {
 .menu span {
     font-size: 1.5em;
     color: #33373D;
+    user-select: none;
 }
 
 /*Parte Interna do Recurso Menu*/
@@ -51,17 +52,17 @@ header p#logo {
     background-color: #33334F;
     transform: translate(-200px, 30px);
     transition: 0.3s ease;
+    box-shadow: 0.5px 0.5px 4px rgba(0, 0, 0, 0.5);
 }
 
 /*Nome Das Listas Dentro do Menu*/
-.menu-close p {
+.menu-close a {
     display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 10px;
     cursor: pointer;
     font-weight: 500;
     color: white;
+    text-decoration: none;
 }
 
 /*ícone Delete*/
@@ -82,6 +83,7 @@ header p#logo {
     font-size: 1.5em;
     color: #33373D;
     text-decoration: none;
+    user-select: none;
 }
 
 /*Div Principal*/
@@ -119,6 +121,7 @@ section {
     box-shadow: 0.5px 0.5px 4px rgba(0, 0, 0, 0.500);
     background-color: #33334F;
     transition: 0.3s ease;
+    user-select: none;
 }
 
 /*Botão de Adicionar Tarefa*/
@@ -134,6 +137,7 @@ section {
     box-shadow: 0.5px 0.5px 4px rgba(0, 0, 0, 0.500);
     background-color: #33334F;
     transition: 0.3s ease;
+    user-select: none;
 }
 
 /*Configuração da Tarefa*/
