--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,6 +102,7 @@ section {
 /*Div Pai dos Botões de Adicionar Listas e Tarefas*/
 .AddListAndTask {
     display: flex;
+    align-items: center;
     justify-content: space-around;
     flex-direction: column;
     gap: 10px;
@@ -114,6 +115,7 @@ section {
     justify-content: center;
     align-items: center;
     padding: 5px;
+    width: 100%;
     cursor: pointer;
     color: white;
     font: bold 1.2em sans-serif;
@@ -130,6 +132,7 @@ section {
     justify-content: center;
     align-items: center;
     padding: 5px;
+    width: 100%;
     cursor: pointer;
     color: white;
     font: bold 1.2em sans-serif;
@@ -179,4 +182,18 @@ section {
     cursor: pointer;
     color: white;
     transition: 0.3s ease;
+}
+
+
+#lista {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    padding: 10px;
+    gap: 10px;
+    transition: 1.5s;
+}
+
+#seta {
+    user-select: none;
 }
